...
    <View style={styles.container}>
      <View style={styles.locationWrap}>
        <Text style={styles.locationText}>{city ?? "Loading..."}</Text>
        <FontAwesome name="map-marker" size={24} color="blue" />
        <View style={styles.switchContainer}>
          <Text>List</Text>
          <Switch   testID="Switch" style={styles.switch} value={displayMap} onChange={event => onDisplayMapChange(event.nativeEvent.value)}/>
          <Text>Map</Text>
        </View>
      </View>
      <NumberInputRow prefix="Within" suffix={distanceUnit || "miles"} value={mutableDistance} onValueChange={onDistanceTextChange} onSubmit={onSubmitDistance}/>
      <NumberInputRow  testID="returning-input" prefix="Returning" suffix="results" value={mutableMaxResults} onValueChange={onResultsTextChange} onSubmit={onSubmitMaxResults} />
    </View>
  )
};

const styles = StyleSheet.create({
  container: { marginBottom: 16 },
...
