...
  const navigation = useNavigation<NavigationRootStackType>();
  const navToDetails = () => {
    navigation.navigate("StationDetails", { poi });
  };

  return (
    <View testID="station-details" style={styles.cardWrap} key={poi.ID}>
      <View style={styles.information}>
        <Text style={styles.addressTitle}>{poi.AddressInfo.Title}</Text>
        <Text>{poi.AddressInfo.AddressLine1}</Text>
        <Text>
          {poi.AddressInfo.Town}, {poi.AddressInfo.StateOrProvince}{" "}
          {poi.AddressInfo.Postcode}
...
          </Text>
        )}
      </View>
      <View style={styles.linkToDetails}>
        <Pressable
          onPress={navToDetails}
          accessibilityLabel="See station details"
          accessibilityHint="Get more information about the station and start charging your vehicle"
          style={styles.arrowStyles}
        >
          <FontAwesome name="arrow-right" size={24} color="black" />
        </Pressable>
      </View>
...
