appId: energy.ev.qa.app
---
- tapOn: 
   id: Switch
- tapOn: Map pin
- assertVisible: Start charging your vehicle
- tapOn: Start charging your vehicle
- assertVisible: Started charging!
- tapOn: Dismiss
- tapOn: Go back