appId: energy.ev.qa.app
---
- runFlow: flow-permissions-allowed.yml
# change amount of stations
- tapOn:
    id: "returning-input"
- eraseText
- inputText: "4"
- pressKey: "Enter"
# See list of stations again
- assertVisible:
    id: "station-details"
    index: 3
- assertNotVisible:
    id: "station-details"
    index: 4
# press one item on the list  
- tapOn:
    text: "See station details"
    index: 0
- assertVisible: Start charging your vehicle
- tapOn: Start charging your vehicle
- assertVisible: Started charging!
- tapOn: Dismiss
- tapOn: Go back