appId: energy.ev.qa.app
---
- launchApp:
    clearState: true
    permissions:        
     location: unset # notification permission is unset by default

- tapOn:
     text: Allow Once

- tapOn: 
   id: Switch
- tapOn: Map pin
- assertVisible: Start charging your vehicle
- tapOn: Start charging your vehicle
- assertVisible: Started charging!
- tapOn: Dismiss
- tapOn: Go back
